--- a/ShoppingCar/Vanilla/package.json
+++ b/ShoppingCar/Vanilla/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run start:dev",
-    "start:dev": "webpack-dev-server --config webpack.development.config.js"
+    "start:dev": "webpack-dev-server --config webpack.development.config.js",
+    "start:client": "webpack --config webpack.client.config.js",
+    "start:server": "webpack --config webpack.server.config.js && node ./dist/server.bundle.js"
   },
   "author": "",
   "license": "MIT"
