--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.4.1",
     "react-redux": "^5.0.7",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
-    "rxjs": "^6.2.1"
+    "rxjs": "^6.2.1",
+    "universal-router": "^6.0.0"
   }
 }
