--- a/ShoppingCar/Vanilla/package.json
+++ b/ShoppingCar/Vanilla/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run start:dev",
-    "start:dev": "webpack-dev-server --config webpack.development.config.js"
+    "start:dev": "webpack-dev-server --config webpack.development.config.js",
+    "start:server": "webpack --watch --config webpack.development.config.js & node ./app/server.js"
   },
   "author": "",
   "license": "MIT"
