--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.6.0",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -37,6 +38,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.3.0",
     "node-sass": "^4.9.0",
+    "nodemon": "^1.17.5",
     "prettier": "^1.13.7",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
